# srm_2024

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  config.yaml  main.cpp
assets/models/: armor.onnx  rune.onnx
assets/models/armor.mlmodelc/: metadata.json  model.espresso.net  model.espresso.shape  model.espresso.weights
assets/models/rune.mlmodelc/: metadata.json  model.espresso.net  model.espresso.shape  model.espresso.weights
doc/: Doxyfile
modules/common/: CMakeLists.txt
modules/common/include/srm/: common.h
modules/common/include/srm/common/: buffer.h  config.h  ekf.h  factory.h  tags.h
modules/common/src/: config.cpp
modules/coord/: CMakeLists.txt
modules/coord/include/srm/: coord.h
modules/coord/include/srm/coord/: coord.h  solver.h
modules/coord/src/: coord.cpp  solver.cpp
modules/core/: CMakeLists.txt
modules/core/include/srm/: core.h
modules/core/include/srm/core/: fps-controller.h
modules/core/src/: core-stereo.cpp  fps-controller.cpp
modules/nn/: CMakeLists.txt
modules/nn/include/srm/: nn.h
modules/nn/include/srm/nn/: yolo.h
modules/nn/src/: yolo.cpp
modules/nn/src/coreml/: Model.h  Model.mm  coreml.mm
modules/nn/src/tensorrt/: cuda-help.h  tensorrt.cpp  yolo-network.cpp  yolo-network.h
modules/robot/: CMakeLists.txt
modules/robot/include/srm/: robot.h
modules/robot/include/srm/robot/: packet.h  serial.h
modules/robot/src/: packet.cpp  serial.cpp
modules/video/: CMakeLists.txt
modules/video/include/srm/: video.h
modules/video/include/srm/video/: camera.h  frame.h  reader.h  writer.h
modules/video/src/: camera-hik.cpp  camera.cpp  reader-camera.cpp  reader-file.cpp  writer.cpp
